plugins {
    id 'groovy'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

dependencies {
    testImplementation "org.spockframework:spock-core:${spockVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
    testImplementation 'org.apache.groovy:groovy-json'
    testImplementation 'org.flywaydb:flyway-core:10.20.1'
    testImplementation 'org.flywaydb:flyway-database-postgresql:10.20.1'
    testImplementation 'org.springframework.security:spring-security-crypto:6.4.4'
    testRuntimeOnly 'org.springframework:spring-jcl:6.2.5'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'org.postgresql:postgresql:42.7.5'
}

test {
    useJUnitPlatform()
    jvmArgs '-Dnet.bytebuddy.experimental=true'
}
